# rand_pixel_sampling

./: CMakeLists.txt  txt_to_draw.cpp
source/: evaluate_picture.cpp  loop_analysis.cpp  pixel.cpp  pixel.hpp  random_sampling_storing.cpp  rsf_writer.cpp  rsf_writer.hpp  sample_example.cpp  sample_random.cpp  sample_random_vid.cpp  txt_to_dist_draw.cpp  txt_to_dist_draw3.cpp  txt_to_dist_draw_s.cpp  txts_to_dist_vid.cpp  txts_to_mp4.cpp  txts_to_mp4_n.cpp
source/evaluation/: evaluate.cpp
source/interpretation/: interpret.cpp
source/sampling/: sample.cpp
